@@ -1,6 +1,7 @@
 0.5.3 - 20100303
 ================
 
+- Will messages are now only sent when a client disconnects unexpectedly.
 - Fix all incoming topics/subscriptions that start with a / or contain
   multiple / in a row (//).
 - Do actually disconnect client when it sends an empty subscription/topic string.
